--- a/templates/result.html
+++ b/templates/result.html
@@ -40,17 +40,17 @@
 <body>
     <div class="container">
         <h1>Resume Summary</h1>
-        <p><strong>Name:</strong> {{ resume_info.Name }}</p>
-        <p><strong>Date of Birth:</strong> {{ resume_info.Date_of_birth }}</p>
-        <p><strong>Phone Number:</strong> {{ resume_info.Phone_number }}</p>
-        <p><strong>Email:</strong> {{ resume_info.Email }}</p>
-        <p><strong>Address:</strong> {{ resume_info.Address }}</p>
-        <p><strong>University:</strong> {{ resume_info.University }}</p>
-        <p><strong>Faculty:</strong> {{ resume_info.Faculty }}</p>
-        <p><strong>Job Experience:</strong> {{ resume_info.Job_experience }}</p>
-        <p><strong>Languages:</strong> {{ resume_info.Languages }}</p>
-        <p><strong>Skills:</strong> {{ resume_info.Skills }}</p>
-        <p><strong>Salary:</strong> {{ resume_info.Salary }}</p>
+        <p><strong>Name </strong> {{ resume_info.Name }}</p>
+        <p><strong>Date of Birth </strong> {{ resume_info.Date_of_birth }}</p>
+        <p><strong>Phone Number </strong> {{ resume_info.Phone_number }}</p>
+        <p><strong>Email </strong> {{ resume_info.Email }}</p>
+        <p><strong>Address </strong> {{ resume_info.Address }}</p>
+        <p><strong>University </strong> {{ resume_info.University }}</p>
+        <p><strong>Faculty </strong> {{ resume_info.Faculty }}</p>
+        <p><strong>Job Experience </strong> {{ resume_info.Experience }}</p>
+        <p><strong>Languages </strong> {{ resume_info.Languages }}</p>
+        <p><strong>Skills </strong> {{ resume_info.Skills }}</p>
+        <p><strong>Salary </strong> {{ resume_info.Salary }}</p>
     </div>
     <div class="footer">
         &copy; 2024 HSE Course Work
