little algorithm changes

--- a/templates/result.html
+++ b/templates/result.html
@@ -42,12 +42,12 @@
         <h1>Resume Summary</h1>
         <p><strong>Name </strong> {{ resume_info.Name }}</p>
         <p><strong>Date of Birth </strong> {{ resume_info.Date_of_birth }}</p>
-        <p><strong>Phone Number </strong> {{ resume_info.Phone_number }}</p>
+        <p><strong>Phone Number </strong> {{ resume_info.Phone }}</p>
         <p><strong>Email </strong> {{ resume_info.Email }}</p>
         <p><strong>Address </strong> {{ resume_info.Address }}</p>
         <p><strong>University </strong> {{ resume_info.University }}</p>
         <p><strong>Faculty </strong> {{ resume_info.Faculty }}</p>
-        <p><strong>Job Experience </strong> {{ resume_info.Experience }}</p>
+        <p><strong>Experience </strong> {{ resume_info.Experience }}</p>
         <p><strong>Languages </strong> {{ resume_info.Languages }}</p>
         <p><strong>Skills </strong> {{ resume_info.Skills }}</p>
         <p><strong>Salary </strong> {{ resume_info.Salary }}</p>
